功能仿真结果不对，屏幕显示全白

--- a/Sourcecode/EFIT/ETIF.runs/impl_1/usage_statistics_webtalk.html
+++ b/Sourcecode/EFIT/ETIF.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Aug  5 16:06:06 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Aug  6 17:05:34 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>0d0047f0ea1848caa6ccc5a62d692505</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>6</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>d09ff82f221a5bd59f5ca0afb19b66af</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>d09ff82f221a5bd59f5ca0afb19b66af</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -33,54 +33,75 @@
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addrepositoryinfodialog_ok=3</TD>
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=1</TD>
-   <TD>basedialog_ok=58</TD>
-   <TD>cmdmsgdialog_ok=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>coreandinterfacesbasetreetablepanel_add_repository=2</TD>
+   <TD>basedialog_ok=83</TD>
+   <TD>basedialog_yes=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=4</TD>
+   <TD>coreandinterfacesbasetreetablepanel_add_repository=2</TD>
    <TD>coretreetablepanel_core_tree_table=34</TD>
    <TD>createsrcfiledialog_file_name=5</TD>
-   <TD>designtimingsumsectionpanel_worst_negative_slack=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=164</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=26</TD>
+</TR><TR ALIGN='LEFT'>   <TD>designtimingsumsectionpanel_worst_negative_slack=6</TD>
+   <TD>filesetpanel_file_set_panel_tree=213</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=34</TD>
    <TD>fpgachooser_fpga_table=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_in=80</TD>
+   <TD>graphicalview_zoom_out=127</TD>
    <TD>hacgcipsymbol_show_disabled_ports=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>hcodeeditor_blank_operations=1</TD>
-   <TD>hcodeeditor_search_text_combo_box=19</TD>
+   <TD>hcodeeditor_blank_operations=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hcodeeditor_search_text_combo_box=28</TD>
    <TD>hinputhandler_replace_text=2</TD>
    <TD>hpopuptitle_close=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>intraclockssectionpanel_intra_clocks_section_table=1</TD>
-   <TD>mainmenumgr_edit=8</TD>
+   <TD>intraclockssectionpanel_intra_clocks_section_table=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_edit=8</TD>
    <TD>mainmenumgr_file=18</TD>
    <TD>mainmenumgr_open_recent_project=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=6</TD>
-   <TD>msgtreepanel_message_view_tree=7</TD>
-   <TD>navigabletimingreporttab_timing_report_navigation_tree=15</TD>
+   <TD>mainmenumgr_project=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=7</TD>
+   <TD>navigabletimingreporttab_timing_report_navigation_tree=18</TD>
    <TD>pacommandnames_add_sources=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=1</TD>
-   <TD>pacommandnames_language_templates=1</TD>
+   <TD>pacommandnames_auto_update_hier=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_language_templates=1</TD>
    <TD>pacommandnames_new_project=1</TD>
    <TD>pacommandnames_open_project=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_reports_window=1</TD>
-   <TD>pacommandnames_run_bitgen=3</TD>
-   <TD>pacommandnames_run_implementation=1</TD>
+   <TD>pacommandnames_reports_window=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_run_bitgen=6</TD>
+   <TD>pacommandnames_run_implementation=3</TD>
    <TD>pacommandnames_schematic=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_toggle_view_nav=2</TD>
-   <TD>pacommandnames_zoom_in=1</TD>
+   <TD>pacommandnames_set_as_top=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_break=20</TD>
+   <TD>pacommandnames_simulation_live_run=5</TD>
+   <TD>pacommandnames_simulation_live_run_all=40</TD>
+   <TD>pacommandnames_simulation_live_step=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_relaunch=28</TD>
+   <TD>pacommandnames_simulation_run_behavioral=3</TD>
+   <TD>pacommandnames_toggle_view_nav=6</TD>
+   <TD>pacommandnames_zoom_in=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_zoom_out=1</TD>
    <TD>pathreporttableview_description=1</TD>
-   <TD>paviews_code=7</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_device=1</TD>
+   <TD>paviews_code=8</TD>
+   <TD>paviews_device=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=3</TD>
    <TD>paviews_schematic=1</TD>
    <TD>paviews_timing_constraints=1</TD>
-   <TD>planaheadtab_show_flow_navigator=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=3</TD>
+   <TD>planaheadtab_show_flow_navigator=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>progressdialog_background=5</TD>
+   <TD>projectnamechooser_choose_project_location=3</TD>
    <TD>projectnamechooser_project_name=1</TD>
    <TD>projectsummarytimingpanel_open_timing_summary_report=1</TD>
-   <TD>projecttab_close_design=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projecttab_close_design=1</TD>
+   <TD>rdicommands_undo=5</TD>
+   <TD>rdiviews_waveform_viewer=197</TD>
+   <TD>rungadget_show_error_and_critical_warning_messages=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=1</TD>
    <TD>simpleoutputproductdialog_generate_output_products_immediately=8</TD>
-   <TD>srcchooserpanel_create_file=5</TD>
-   <TD>srcmenu_ip_hierarchy=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticagettingstartedview_recent_projects=3</TD>
+   <TD>simulationobjectspanel_simulation_objects_tree_table=25</TD>
+   <TD>simulationscopespanel_simulate_scope_table=26</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_create_file=5</TD>
+   <TD>srcmenu_ip_hierarchy=2</TD>
+   <TD>syntheticagettingstartedview_recent_projects=5</TD>
    <TD>timingitemflattablepanel_table=11</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformnametree_waveform_name_tree=93</TD>
+   <TD>waveformview_goto_last_time=1</TD>
+   <TD>waveformview_goto_time_0=28</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
@@ -92,22 +113,31 @@
    <TD>newproject=1</TD>
    <TD>openexistingreport=1</TD>
    <TD>openproject=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>recustomizecore=22</TD>
+</TR><TR ALIGN='LEFT'>   <TD>recustomizecore=28</TD>
    <TD>reporttimingsummary=2</TD>
-   <TD>runbitgen=3</TD>
-   <TD>runimplementation=9</TD>
+   <TD>runbitgen=6</TD>
+   <TD>runimplementation=14</TD>
 </TR><TR ALIGN='LEFT'>   <TD>runschematic=2</TD>
-   <TD>runsynthesis=9</TD>
-   <TD>savefileproxyhandler=3</TD>
-   <TD>showview=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>toggleviewnavigator=2</TD>
-   <TD>toolstemplates=1</TD>
-   <TD>viewtaskimplementation=1</TD>
-   <TD>zoomin=1</TD>
+   <TD>runsynthesis=14</TD>
+   <TD>savefileproxyhandler=5</TD>
+   <TD>settopnode=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>showview=5</TD>
+   <TD>simulationbreak=20</TD>
+   <TD>simulationrelaunch=24</TD>
+   <TD>simulationrun=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationrunall=39</TD>
+   <TD>simulationrunfortime=5</TD>
+   <TD>simulationstep=16</TD>
+   <TD>toggleviewnavigator=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>toolstemplates=1</TD>
+   <TD>viewtaskimplementation=3</TD>
+   <TD>waveformsaveconfiguration=3</TD>
+   <TD>zoomin=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>zoomout=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=42</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=43</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -131,7 +161,7 @@
    <TD>launch_simulation_questa=0</TD>
    <TD>launch_simulation_riviera=0</TD>
    <TD>launch_simulation_vcs=0</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=0</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=52</TD>
    <TD>simulator_language=Mixed</TD>
    <TD>srcsetcount=3</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
@@ -148,20 +178,20 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=3</TD>
     <TD>carry4=104</TD>
-    <TD>fdce=309</TD>
+    <TD>fdce=308</TD>
     <TD>fdpe=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre=131</TD>
     <TD>fdse=15</TD>
     <TD>gnd=32</TD>
     <TD>ibuf=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut1=89</TD>
-    <TD>lut2=288</TD>
-    <TD>lut3=179</TD>
-    <TD>lut4=160</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut5=82</TD>
-    <TD>lut6=134</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1=90</TD>
+    <TD>lut2=286</TD>
+    <TD>lut3=158</TD>
+    <TD>lut4=124</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5=134</TD>
+    <TD>lut6=122</TD>
     <TD>mmcme2_adv=1</TD>
-    <TD>muxf7=8</TD>
+    <TD>muxf7=9</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obufds=4</TD>
     <TD>oserdese2=8</TD>
     <TD>plle2_adv=1</TD>
@@ -174,20 +204,20 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=3</TD>
     <TD>carry4=104</TD>
-    <TD>fdce=309</TD>
+    <TD>fdce=308</TD>
     <TD>fdpe=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre=131</TD>
     <TD>fdse=15</TD>
     <TD>gnd=32</TD>
     <TD>ibuf=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut1=89</TD>
-    <TD>lut2=288</TD>
-    <TD>lut3=179</TD>
-    <TD>lut4=160</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut5=82</TD>
-    <TD>lut6=134</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1=90</TD>
+    <TD>lut2=286</TD>
+    <TD>lut3=158</TD>
+    <TD>lut4=124</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5=134</TD>
+    <TD>lut6=122</TD>
     <TD>mmcme2_adv=1</TD>
-    <TD>muxf7=8</TD>
+    <TD>muxf7=9</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obufds=4</TD>
     <TD>oserdese2=8</TD>
     <TD>plle2_adv=1</TD>
@@ -216,7 +246,7 @@
     <TD>flow_state=default</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_augmented=0</TD>
     <TD>slice_registers_newly_gated=0</TD>
-    <TD>slice_registers_total=386</TD>
+    <TD>slice_registers_total=453</TD>
     <TD>srls_augmented=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>srls_newly_gated=0</TD>
     <TD>srls_total=0</TD>
@@ -499,33 +529,33 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=5</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=99</TD>
+    <TD>carry4_used=104</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdce_functional_category=Flop &amp; Latch</TD>
-    <TD>fdce_used=287</TD>
+    <TD>fdce_used=308</TD>
     <TD>fdpe_functional_category=Flop &amp; Latch</TD>
     <TD>fdpe_used=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=76</TD>
+    <TD>fdre_used=122</TD>
     <TD>fdse_functional_category=Flop &amp; Latch</TD>
     <TD>fdse_used=15</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=8</TD>
     <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=76</TD>
+    <TD>lut1_used=91</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=283</TD>
+    <TD>lut2_used=287</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=176</TD>
+    <TD>lut3_used=169</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=144</TD>
+    <TD>lut4_used=97</TD>
     <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=52</TD>
+    <TD>lut5_used=128</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=81</TD>
+    <TD>lut6_used=104</TD>
     <TD>mmcme2_adv_functional_category=Clock</TD>
     <TD>mmcme2_adv_used=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>muxf7_functional_category=MuxFx</TD>
-    <TD>muxf7_used=8</TD>
+    <TD>muxf7_used=9</TD>
     <TD>obufds_functional_category=IO</TD>
     <TD>obufds_used=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>oserdese2_functional_category=IO</TD>
@@ -541,42 +571,42 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>slice_logic</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>f7_muxes_available=4000</TD>
     <TD>f7_muxes_fixed=0</TD>
-    <TD>f7_muxes_used=8</TD>
-    <TD>f7_muxes_util_percentage=0.20</TD>
+    <TD>f7_muxes_used=9</TD>
+    <TD>f7_muxes_util_percentage=0.23</TD>
 </TR><TR ALIGN='LEFT'>    <TD>f8_muxes_available=2000</TD>
     <TD>f8_muxes_fixed=0</TD>
     <TD>f8_muxes_used=0</TD>
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=8000</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=675</TD>
-    <TD>lut_as_logic_util_percentage=8.44</TD>
+    <TD>lut_as_logic_used=707</TD>
+    <TD>lut_as_logic_util_percentage=8.84</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=2400</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=16000</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=386</TD>
-    <TD>register_as_flip_flop_util_percentage=2.41</TD>
+    <TD>register_as_flip_flop_used=453</TD>
+    <TD>register_as_flip_flop_util_percentage=2.83</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=16000</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=8000</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=675</TD>
-    <TD>slice_luts_util_percentage=8.44</TD>
+    <TD>slice_luts_used=707</TD>
+    <TD>slice_luts_util_percentage=8.84</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=16000</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=386</TD>
-    <TD>slice_registers_util_percentage=2.41</TD>
+    <TD>slice_registers_used=453</TD>
+    <TD>slice_registers_util_percentage=2.83</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=8000</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=675</TD>
-    <TD>lut_as_logic_util_percentage=8.44</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=707</TD>
+    <TD>lut_as_logic_util_percentage=8.84</TD>
     <TD>lut_as_memory_available=2400</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -584,35 +614,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=66</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=66</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=100</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=100</TD>
-    <TD>register_driven_from_outside_the_slice_used=166</TD>
-    <TD>register_driven_from_within_the_slice_fixed=166</TD>
-    <TD>register_driven_from_within_the_slice_used=220</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=73</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=73</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=102</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=102</TD>
+    <TD>register_driven_from_outside_the_slice_used=175</TD>
+    <TD>register_driven_from_within_the_slice_fixed=175</TD>
+    <TD>register_driven_from_within_the_slice_used=278</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=2000</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=16000</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=386</TD>
-    <TD>slice_registers_util_percentage=2.41</TD>
-    <TD>slice_used=236</TD>
-    <TD>slice_util_percentage=11.80</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=453</TD>
+    <TD>slice_registers_util_percentage=2.83</TD>
+    <TD>slice_used=250</TD>
+    <TD>slice_util_percentage=12.50</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=165</TD>
+    <TD>slicel_used=157</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=71</TD>
+    <TD>slicem_used=93</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=2000</TD>
     <TD>unique_control_sets_fixed=2000</TD>
-    <TD>unique_control_sets_used=37</TD>
-    <TD>unique_control_sets_util_percentage=1.85</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=1.85</TD>
-    <TD>using_o5_and_o6_used=137</TD>
-    <TD>using_o5_output_only_fixed=137</TD>
-    <TD>using_o5_output_only_used=9</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=9</TD>
-    <TD>using_o6_output_only_used=529</TD>
+    <TD>unique_control_sets_used=36</TD>
+    <TD>unique_control_sets_util_percentage=1.80</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=1.80</TD>
+    <TD>using_o5_and_o6_used=169</TD>
+    <TD>using_o5_output_only_fixed=169</TD>
+    <TD>using_o5_output_only_used=10</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=10</TD>
+    <TD>using_o6_output_only_used=528</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -693,10 +723,20 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:02:04s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:01:07s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=517.855MB</TD>
-    <TD>memory_peak=872.813MB</TD>
+    <TD>memory_gain=529.633MB</TD>
+    <TD>memory_peak=884.934MB</TD>
+</TR>   </TABLE>
+   </TD></TR>
+  </TABLE><BR>
+ <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>xsim</B></TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>-sim_mode=behavioral</TD>
+    <TD>-sim_type=default::</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
